--- a/pom.xml
+++ b/pom.xml
@@ -20,9 +20,9 @@
 		<dependency>
 			<groupId>com.kuaimai</groupId>
 			<artifactId>core</artifactId>
-			<version>1.0.1</version>
+			<version>1.1.8</version>
 			<scope>system</scope>
-			<systemPath>${project.basedir}/lib/kuaimai-core-1.1.6.jar</systemPath>
+			<systemPath>${project.basedir}/lib/kuaimai-core-1.1.8-jar-with-dependencies.jar</systemPath>
 		</dependency>
 
 	</dependencies>
