--- a/pom.xml
+++ b/pom.xml
@@ -19,10 +19,10 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.kuaimai</groupId>
-			<artifactId>core</artifactId>
-			<version>1.2.8</version>
+			<artifactId>kuaimai-core</artifactId>
+			<version>1.2.9</version>
 			<scope>system</scope>
-			<systemPath>${project.basedir}/lib/kuaimai-core-1.2.8-jar-with-dependencies.jar</systemPath>
+			<systemPath>${project.basedir}/lib/kuaimai-core-1.2.9-jar-with-dependencies.jar</systemPath>
 		</dependency>
 
 	</dependencies>
